examples/tpCompilBenj/tp_y.output
Grammaire

    0 $accept: programme $end

    1 programme: declLO BEG expr END

    2 declLO: /* vide */
    3       | declL

    4 declL: ID AFF expr ';'
    5      | declL ID AFF expr ';'

    6 expr: expr ADD expr
    7     | expr SUB expr
    8     | expr MUL expr
    9     | expr DIV expr
   10     | IF bexpr THEN expr ELSE expr
   11     | CST
   12     | GET '(' ')'
   13     | PUT '(' NOM_STR ',' expr ')'
   14     | NOM_VAR
   15     | '(' expr ')'

   16 bexpr: expr NOM_RELOP expr
   17      | '(' bexpr ')'

   18 NOM_VAR: ID

   19 NOM_RELOP: RELOP

   20 NOM_STR: STR


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 12 13 15 17
')' (41) 12 13 15 17
',' (44) 13
';' (59) 4 5
error (256)
BEG (258) 1
END (259) 1
AFF (260) 4 5
ID (261) 4 5 18
STR (262) 20
CST (263) 11
RELOP (264) 19
IF (265) 10
THEN (266) 10
ELSE (267) 10
GET (268) 12
PUT (269) 13
SUB (270) 7
ADD (271) 6
DIV (272) 9
MUL (273) 8


Non-terminaux, suivis des règles où ils apparaissent

$accept (23)
    à gauche: 0
programme (24)
    à gauche: 1, à droite: 0
declLO (25)
    à gauche: 2 3, à droite: 1
declL (26)
    à gauche: 4 5, à droite: 3 5
expr (27)
    à gauche: 6 7 8 9 10 11 12 13 14 15, à droite: 1 4 5 6 7 8 9
    10 13 15 16
bexpr (28)
    à gauche: 16 17, à droite: 10 17
NOM_VAR (29)
    à gauche: 18, à droite: 14
NOM_RELOP (30)
    à gauche: 19, à droite: 16
NOM_STR (31)
    à gauche: 20, à droite: 13


état 0

    0 $accept: . programme $end

    ID  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (declLO)

    programme  aller à l'état 2
    declLO     aller à l'état 3
    declL      aller à l'état 4


état 1

    4 declL: ID . AFF expr ';'

    AFF  décalage et aller à l'état 5


état 2

    0 $accept: programme . $end

    $end  décalage et aller à l'état 6


état 3

    1 programme: declLO . BEG expr END

    BEG  décalage et aller à l'état 7


état 4

    3 declLO: declL .
    5 declL: declL . ID AFF expr ';'

    ID  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 3 (declLO)


état 5

    4 declL: ID AFF . expr ';'

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 15
    NOM_VAR  aller à l'état 16


état 6

    0 $accept: programme $end .

    $défaut  accepter


état 7

    1 programme: declLO BEG . expr END

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 17
    NOM_VAR  aller à l'état 16


état 8

    5 declL: declL ID . AFF expr ';'

    AFF  décalage et aller à l'état 18


état 9

   18 NOM_VAR: ID .

    $défaut  réduction par utilisation de la règle 18 (NOM_VAR)


état 10

   11 expr: CST .

    $défaut  réduction par utilisation de la règle 11 (expr)


état 11

   10 expr: IF . bexpr THEN expr ELSE expr

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 19

    expr     aller à l'état 20
    bexpr    aller à l'état 21
    NOM_VAR  aller à l'état 16


état 12

   12 expr: GET . '(' ')'

    '('  décalage et aller à l'état 22


état 13

   13 expr: PUT . '(' NOM_STR ',' expr ')'

    '('  décalage et aller à l'état 23


état 14

   15 expr: '(' . expr ')'

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 24
    NOM_VAR  aller à l'état 16


état 15

    4 declL: ID AFF expr . ';'
    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr

    SUB  décalage et aller à l'état 25
    ADD  décalage et aller à l'état 26
    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28
    ';'  décalage et aller à l'état 29


état 16

   14 expr: NOM_VAR .

    $défaut  réduction par utilisation de la règle 14 (expr)


état 17

    1 programme: declLO BEG expr . END
    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr

    END  décalage et aller à l'état 30
    SUB  décalage et aller à l'état 25
    ADD  décalage et aller à l'état 26
    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28


état 18

    5 declL: declL ID AFF . expr ';'

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 31
    NOM_VAR  aller à l'état 16


état 19

   15 expr: '(' . expr ')'
   17 bexpr: '(' . bexpr ')'

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 19

    expr     aller à l'état 32
    bexpr    aller à l'état 33
    NOM_VAR  aller à l'état 16


état 20

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr
   16 bexpr: expr . NOM_RELOP expr

    RELOP  décalage et aller à l'état 34
    SUB    décalage et aller à l'état 25
    ADD    décalage et aller à l'état 26
    DIV    décalage et aller à l'état 27
    MUL    décalage et aller à l'état 28

    NOM_RELOP  aller à l'état 35


état 21

   10 expr: IF bexpr . THEN expr ELSE expr

    THEN  décalage et aller à l'état 36


état 22

   12 expr: GET '(' . ')'

    ')'  décalage et aller à l'état 37


état 23

   13 expr: PUT '(' . NOM_STR ',' expr ')'

    STR  décalage et aller à l'état 38

    NOM_STR  aller à l'état 39


état 24

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr
   15     | '(' expr . ')'

    SUB  décalage et aller à l'état 25
    ADD  décalage et aller à l'état 26
    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28
    ')'  décalage et aller à l'état 40


état 25

    7 expr: expr SUB . expr

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 41
    NOM_VAR  aller à l'état 16


état 26

    6 expr: expr ADD . expr

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 42
    NOM_VAR  aller à l'état 16


état 27

    9 expr: expr DIV . expr

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 43
    NOM_VAR  aller à l'état 16


état 28

    8 expr: expr MUL . expr

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 44
    NOM_VAR  aller à l'état 16


état 29

    4 declL: ID AFF expr ';' .

    $défaut  réduction par utilisation de la règle 4 (declL)


état 30

    1 programme: declLO BEG expr END .

    $défaut  réduction par utilisation de la règle 1 (programme)


état 31

    5 declL: declL ID AFF expr . ';'
    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr

    SUB  décalage et aller à l'état 25
    ADD  décalage et aller à l'état 26
    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28
    ';'  décalage et aller à l'état 45


état 32

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr
   15     | '(' expr . ')'
   16 bexpr: expr . NOM_RELOP expr

    RELOP  décalage et aller à l'état 34
    SUB    décalage et aller à l'état 25
    ADD    décalage et aller à l'état 26
    DIV    décalage et aller à l'état 27
    MUL    décalage et aller à l'état 28
    ')'    décalage et aller à l'état 40

    NOM_RELOP  aller à l'état 35


état 33

   17 bexpr: '(' bexpr . ')'

    ')'  décalage et aller à l'état 46


état 34

   19 NOM_RELOP: RELOP .

    $défaut  réduction par utilisation de la règle 19 (NOM_RELOP)


état 35

   16 bexpr: expr NOM_RELOP . expr

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 47
    NOM_VAR  aller à l'état 16


état 36

   10 expr: IF bexpr THEN . expr ELSE expr

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 48
    NOM_VAR  aller à l'état 16


état 37

   12 expr: GET '(' ')' .

    $défaut  réduction par utilisation de la règle 12 (expr)


état 38

   20 NOM_STR: STR .

    $défaut  réduction par utilisation de la règle 20 (NOM_STR)


état 39

   13 expr: PUT '(' NOM_STR . ',' expr ')'

    ','  décalage et aller à l'état 49


état 40

   15 expr: '(' expr ')' .

    $défaut  réduction par utilisation de la règle 15 (expr)


état 41

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    7     | expr SUB expr .
    8     | expr . MUL expr
    9     | expr . DIV expr

    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 7 (expr)


état 42

    6 expr: expr . ADD expr
    6     | expr ADD expr .
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr

    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 6 (expr)


état 43

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr
    9     | expr DIV expr .

    $défaut  réduction par utilisation de la règle 9 (expr)


état 44

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    8     | expr MUL expr .
    9     | expr . DIV expr

    $défaut  réduction par utilisation de la règle 8 (expr)


état 45

    5 declL: declL ID AFF expr ';' .

    $défaut  réduction par utilisation de la règle 5 (declL)


état 46

   17 bexpr: '(' bexpr ')' .

    $défaut  réduction par utilisation de la règle 17 (bexpr)


état 47

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr
   16 bexpr: expr NOM_RELOP expr .

    SUB  décalage et aller à l'état 25
    ADD  décalage et aller à l'état 26
    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 16 (bexpr)


état 48

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr
   10     | IF bexpr THEN expr . ELSE expr

    ELSE  décalage et aller à l'état 50
    SUB   décalage et aller à l'état 25
    ADD   décalage et aller à l'état 26
    DIV   décalage et aller à l'état 27
    MUL   décalage et aller à l'état 28


état 49

   13 expr: PUT '(' NOM_STR ',' . expr ')'

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 51
    NOM_VAR  aller à l'état 16


état 50

   10 expr: IF bexpr THEN expr ELSE . expr

    ID   décalage et aller à l'état 9
    CST  décalage et aller à l'état 10
    IF   décalage et aller à l'état 11
    GET  décalage et aller à l'état 12
    PUT  décalage et aller à l'état 13
    '('  décalage et aller à l'état 14

    expr     aller à l'état 52
    NOM_VAR  aller à l'état 16


état 51

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr
   13     | PUT '(' NOM_STR ',' expr . ')'

    SUB  décalage et aller à l'état 25
    ADD  décalage et aller à l'état 26
    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28
    ')'  décalage et aller à l'état 53


état 52

    6 expr: expr . ADD expr
    7     | expr . SUB expr
    8     | expr . MUL expr
    9     | expr . DIV expr
   10     | IF bexpr THEN expr ELSE expr .

    SUB  décalage et aller à l'état 25
    ADD  décalage et aller à l'état 26
    DIV  décalage et aller à l'état 27
    MUL  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 10 (expr)


état 53

   13 expr: PUT '(' NOM_STR ',' expr ')' .

    $défaut  réduction par utilisation de la règle 13 (expr)
